@@ -1,3 +1,8 @@
+2003-10-24  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elflink.h (NAME(bfd_elf,size_dynamic_sections)): Look up
+	hash table for real symbols.
+
 2003-10-23  Michael Snyder  <msnyder@redhat.com>
 
 	* section.c (asection): Fix typo in comment.
